# ct-ecs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  ecs.hpp  macros.hpp
.github/workflows/: cmake.yml  coverage.yml
components/: transform_component.hpp
dependencies/: CMakeLists.txt
entities/: entities_utils.hpp  entity.hpp
examples/: CMakeLists.txt
examples/space/: CMakeLists.txt  shaders.h  space.cpp
examples/space/components/: bullet_component.hpp  circle_collider_component.hpp  decay_component.hpp  health_component.hpp  laser_gun_component.hpp  mesh_component.hpp  name_component.hpp  player_component.hpp  rigid_body_component.hpp  sprite_component.hpp  transform_component.hpp
examples/space/core/: application.cpp  application.hpp  ecs_settings.hpp  input.cpp  input.hpp  key_codes.hpp  keycodes.hpp  mesh_asset.hpp  mouse_codes.hpp  mousecodes.hpp  texture_manager.cpp  texture_manager.hpp  time.cpp  time.hpp  window.cpp  window.hpp
examples/space/events/: game_events.hpp
examples/space/systems/: collision_system.hpp  decay_system.hpp  meteor_manager_system.hpp  physics_system.hpp  player_move_system.hpp  player_system.hpp  render_system.cpp  render_system.hpp  shoot_system.hpp
examples/space/tags/: tags.hpp
examples/space/utils/: quadtree.cpp  quadtree.hpp
include/ecs/: ecs.hpp
managers/: component_manager.hpp  entity_manager.hpp  manager.hpp  settings.hpp
src/core/: sparse_set.hpp  type_defs.hpp
src/managers/: component_manager.hpp  entity_manager.hpp  manager.hpp  settings.hpp
src/systems/: base_system.hpp
systems/: base_system.hpp  physics_sytem.hpp
tags/: tags.hpp
tests/: CMakeLists.txt
tests/src/: ecs_manager_spec.cpp  ecs_settings.hpp  entity_manager_spec.cpp  sparse_set_spec.cpp
tests/src/components/: name_component.hpp  rigid_body_component.hpp  transform_component.hpp
tests/src/systems/: enemy_movement_system.hpp  physics_system.hpp  player_movement_system.hpp
tests/src/tags/: enemy_tag.hpp  player_tag.hpp
